--- a/package.json
+++ b/package.json
@@ -3,15 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon --exec babel-node --presets es2015 bin/www"
   },
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "bcrypt": "^1.0.3",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
+    "mongodb": "^3.0.5",
+    "mongoose": "^5.0.12",
     "morgan": "~1.9.0",
+    "nodemon": "^1.17.3",
     "serve-favicon": "~2.4.5"
   }
 }
