--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
+    "express-session": "^1.15.6",
     "mongodb": "^3.0.5",
     "mongoose": "^5.0.12",
     "morgan": "~1.9.0",
