--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "morgan": "~1.9.0",
     "nodemon": "^1.17.3",
     "serve-favicon": "~2.4.5"
+  },
+  "devDependencies": {
+    "cors": "^2.8.4"
   }
 }
