--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "~2.5.7",
     "express": "~4.15.5",
     "express-session": "^1.15.6",
+    "jsonwebtoken": "^8.2.1",
     "mongodb": "^3.0.5",
     "mongoose": "^5.0.12",
     "morgan": "~1.9.0",
